# ChangeLog for net-mail/qmail-qfilter
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/qmail-qfilter/ChangeLog,v 1.7 2005/01/07 18:32:12 hansmi Exp $

*qmail-qfilter-2.0 (07 Jan 2005)

  07 Jan 2005; Michael Hanselmann <hansmi@gentoo.org>
  +qmail-qfilter-2.0.ebuild:
  New version 2.0, ebuild provided by Thilo Bangert in bug 77022.

  26 Oct 2004; Tom Martin <slarti@gentoo.org> qmail-qfilter-1.5.ebuild:
  Marked ~amd64, fixing ${CC} with regard to bug 69004.

  29 Sep 2004; Andrej Kacian <ticho@gentoo.org> +metadata.xml,
  qmail-qfilter-1.5.ebuild:
  Add missing metadata.xml. Stable on x86.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  qmail-qfilter-1.5.ebuild:
  virtual/glibc -> virtual/libc

*qmail-qfilter-1.5 (31 Jul 2003)

  31 Jul 2003; Robin H. Johnson <robbat2@gentoo.org> qmail-qfilter-1.5.ebuild:
  Initial commit, partially based on bug #4388 by Enrico Morelli
  <morelli@cerm.unifi.it>, but changed for security reasons.
